EA2/ACT2.1/ec2_module/main.tf
resource "aws_key_pair" "mi_key" {
  key_name   = var.key_name
  public_key = var.public_key
}

// Modifico el SG original y lo dejo solo para la instancia publica
resource "aws_security_group" "ssh_access_public" {
  // cambio el name para parametrizar el nombre 
  name        = "${var.security_group_name}_public"
  description = "Permitir acceso SSH desde cualquier IPv4"
  vpc_id      = var.vpc_id

  ingress {
    description = "SSH desde cualquier lugar"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    // cambio el acceso a mi publica
    //cidr_blocks = ["0.0.0.0/0"]
    cidr_blocks = ["201.188.95.11/32"]
    
  }

  egress {
    description = "Permitir trafico de salida a cualquier lugar"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = var.security_group_name
  }
}

// Creo un 2do SG pero limitando el acceso desde la instancia publica a la privada

resource "aws_security_group" "ssh_access_private" {
  //tambien cambio aca
  name        = "${var.security_group_name}_private"
  description = "Permitir acceso SSH desde cualquier IPv4"
  vpc_id      = var.vpc_id

  ingress {
    description = "SSH desde cualquier lugar"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    // aqui dejo el rango de IP de la instancia publica
    cidr_blocks = ["10.1.1.0/24"]  
  }

  egress {
    description = "Permitir trafico de salida a cualquier lugar"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = var.security_group_name
  }
}




resource "aws_instance" "mi_ec2" {
  ami                    = var.ami
  instance_type          = var.instance_type
  key_name               = aws_key_pair.mi_key.key_name
  subnet_id              = var.subnet_id
  //para la parte de las reglas de seguridad cambio la variable del SG para decidir sobre 2
  //vpc_security_group_ids = [aws_security_group.ssh_access.id]
  vpc_security_group_ids = [
  var.is_private ? aws_security_group.ssh_access_private.id 
                 : aws_security_group.ssh_access_public.id
]
  tags = {
    Name = var.instance_name
  }
}
